Added boundingbox-pathing (WIP)